--- a/app/i18n/dapp.en.i18n.json
+++ b/app/i18n/dapp.en.i18n.json
@@ -3,8 +3,10 @@
 		"app": {
 			"title": "My Ethereum ÐApp"
 			, "buttons": {
-				"view1": "View1"
-				, "view2": "View2"
+				"view1": "Dashboard"
+				, "view2": "Send"
+				, "admin": "Admin"
+				, "userEdit": "Edit"
 			}
 			, "headers": {
 				"identicon": "Identicon"
@@ -29,7 +31,7 @@
 			}
 			, "accounts": {
 				"header": "My Accounts"
-				, "description": "These are your Ethereum addresses. The identicons are generated based on the address value. Note, balance is static."			
+				, "description": "These are your Ethereum addresses. The identicons are generated based on the address value. Note, balance is static."
 			}
 			, "multiplyContract": {
 				"header": "Multiply Contract"
@@ -39,7 +41,7 @@
 				, "placeholder": "Number To Multiply"
 			}
 			, "networkHealth": {
-				"header": "Network Health"			
+				"header": "Network Health"
 			}
 		}
 		, "view1": {
